--- a/styles.css
+++ b/styles.css
@@ -20,16 +20,17 @@ body {
   max-width: 400px;
 }
 
-.square {
+.circle {
   width: 16px;
   height: 16px;
   background: #1d1d1d;
   margin: 2px;
   box-shadow: 0 0 2px #000;
   transition: 2s ease;
-  color: #7f92ff, 100%, 75%);
+  border-radius: 50%;
+  
 }
 
-.square:hover {
+.circle:hover {
   transition-duration: 0s;
 }
